# dapps-workshop-tamagotchi-battle

./: .gitignore
.github/workflows/: cd.yml
battle/: .binpath  Cargo.toml
battle/tests/: node-test.rs
contracts/: .gitignore  Cargo.toml
contracts/battle/: .binpath  Cargo.toml
contracts/battle/io/src/: lib.rs
contracts/battle/src/: lib.rs
contracts/battle/state/src/: lib.rs
contracts/battle/tests/: node-test.rs
contracts/tamagotchi/: Cargo.toml
contracts/tamagotchi/io/: Cargo.toml
contracts/tamagotchi/state/: Cargo.toml
frontend/: package.json
frontend/src/: app.scss  app.tsx  index.css
frontend/src/app/: consts.ts
frontend/src/app/utils/: index.ts
frontend/src/components/cards/tamagotchi-queue-card/: tamagotchi-queue-card.tsx
frontend/src/components/common/account-button/: account-button.tsx
frontend/src/components/common/get-gas-balance/: get-gas-balance.tsx
frontend/src/components/common/tamagotchi-avatar/: tamagotchi-avatar.tsx
frontend/src/components/forms/create-tamagotchi-form/: create-tamagotchi-form.tsx
frontend/src/components/layout/footer/: footer.tsx
frontend/src/components/layout/header/account/: account.tsx
frontend/src/components/layout/header/logo/: logo.tsx
frontend/src/components/sections/battle-players-queue/: battle-players-queue.tsx
frontend/src/components/sections/battle-round-info/: battle-round-info.tsx
frontend/src/components/sections/battle-round-players/: battle-round-players.tsx
frontend/src/components/sections/battle-round-stats/: battle-round-stats.tsx
frontend/src/components/sections/battle-round-stats-avatar/: battle-round-stats-avatar.tsx
frontend/src/components/sections/battle-table-champions/: battle-table-champions.tsx
frontend/src/components/sections/battle-table-pairs/: battle-table-pairs.tsx
frontend/src/components/sections/battle-wait-admin/: battle-wait-admin.tsx
frontend/src/features/battle/components/battle-round-info/: battle-round-info.tsx
frontend/src/features/battle/components/battle-round-players/: battle-round-players.tsx
frontend/src/features/battle/components/battle-round-stats/: battle-round-stats.tsx  counter.tsx
frontend/src/features/battle/components/battle-round-stats-avatar/: battle-round-stats-avatar.tsx
frontend/src/features/battle/components/battle-table-champions/: battle-table-champions.tsx
frontend/src/features/battle/components/battle-table-pairs/: battle-table-pairs.tsx
frontend/src/features/battle/components/battle-wait-admin/: battle-wait-admin.tsx
frontend/src/features/battle/components/battle-winner/: battle-winner.tsx
frontend/src/features/battle/components/tamagotchi-avatar/: tamagotchi-avatar.tsx
frontend/src/features/battle/components/tamagotchi-queue-card/: tamagotchi-queue-card.tsx
frontend/src/features/battle/hooks/: use-battle.ts
frontend/src/features/wallet/components/: wallet-account.tsx  wallet-balance.tsx
frontend/src/pages/: home.tsx  index.tsx  test.tsx
