[workspace]
resolver = "2"
members = [
    "battle",
    "tamagotchi",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gclient = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2.7", default-features = false }
battle-io = { path = "battle/io" }
tmg-io = { path = "tamagotchi/io" }
tmg-io-7 = { path = "tamagotchi/io" }
hex-literal = "0.3"
tokio = "1"
hex = "0.4"
battle-state = { path = "battle/state" }
