[package]
name = "battle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd.workspace = true
parity-scale-codec.workspace = true
battle-io.workspace = true
tmg-io.workspace = true
scale-info.workspace = true
hex-literal.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
battle-io.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
hex.workspace = true
battle-state.workspace = true
