[package]
name = "tmg"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "testnet" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3", default-features = false }
tmg-io = { path = "io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" , branch = "testnet" }
tmg-io = { path = "io" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
