[package]
name = "tmg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd.workspace = true
scale-info.workspace = true
parity-scale-codec.workspace = true
tmg-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
tmg-io.workspace = true

[dev-dependencies]
gtest.workspace = true
