[package]
name = "tmg-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gmeta = {  git = "https://github.com/gear-tech/gear.git" , branch = "testnet" }
gstd = { git = "https://github.com/gear-tech/gear.git" , branch = "testnet"}
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3", default-features = false }