[package]
name = "tmg-state-7"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gmeta = { workspace = true, features = ["codegen"] }
gstd.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
tmg-io-7.workspace = true

[build-dependencies]
gear-wasm-builder = { workspace = true features = ["metawasm"] }

[features]
default = ["std"]
std = []
